# GlobalRecognition

./: .gitignore  CMakeLists.txt  README.md  roi.txt
include/global_recognition/: global_recognition.h
include/heuristic_verification/: heuristic_verification.h
include/openni_frame_source/: openni_frame_source.h
include/pose_estimation/: crh_pose_estimation.h  pose_estimation.h
include/post_processing/: post_processing.h  post_processing_v1.h
include/pre_processing/: pre_processing.h
include/recognition_database/: hypothesis.h  recognition_database.h
models/: .directory
models_all/: L1a.ply  L3b.ply
src/: trainDB.cpp
src/test/: descriptor_estimation_test.cpp  global_recognition_test.cpp  pose_estimation_test.cpp  post_processing_test.cpp  pre_processing_test.cpp  recognition_database_test.cpp
train_pcd/L4a/poses/: pose_2.txt  (+8 more)
trained/L4a/: L4a.pcd
trained/Link12_1/: Link12_1.pcd
trained/Link23_3H/: Link23_3H.pcd  Link23_3H.ply
trained3/L4a/: L4a.pcd
trained_2/H7_base/: H7_base.pcd  H7_base_bak.pcd
trained_2/L4a/: L4a.pcd  L4a_bak.pcd
trained_2/Link12_1/: Link12_1.pcd  Link12_1_bak.pcd
trained_2/Link23_3H/: Link23_3H_bak.pcd
trained_all/H7_base/: H7_base.pcd
trained_all/L1a/: L1a.pcd
trained_all/L3b/: L3b.pcd
trained_all/L4a/: L4a.pcd  L4a.ply
trained_all/Link12_1/: Link12_1.pcd  Link12_1.ply
trained_all/Link23_3H/: Link23_3H.pcd
trained_all/Reducer/: Reducer.pcd  Reducer.ply
trained_all_3/H7_base/: H7_base.pcd  H7_base.ply
trained_all_3/L1a/: L1a.pcd
trained_all_3/L3b/: L3b.pcd
trained_all_3/Link12_1/: Link12_1.pcd
(+38599 files in other folders)
